# go2-lab

./: .env  .env.bridge.example  .env.example  .env.jetson.example  .env.visualization-host.example  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  go2.repos  zenoh-config-client.json  zenoh-config-jetson.json
configs/deploy/: src-bridge.txt  src-common.txt  src-desktop.txt  src-jetson.txt  src-visualization-host.txt
configs/fast_lio/: mid360.yaml
configs/livox/: MID360_config.json
configs/unitree_ros2/: setup.sh
configs/zenoh/: zenoh-config-client.json.tmpl  zenoh-config-router.json  zenoh-config-router.json.tmpl
docker/: .zshrc  Dockerfile  Dockerfile.azure  Dockerfile.bridge  Dockerfile.jetson  Dockerfile.slam  container_run.sh  docker-compose.yml  ros_entrypoint.sh
docs/plans/: imu-publisher.md  nav2-minimal.md
install/cmd_vel_control/share/cmd_vel_control/: package.bash  package.zsh
install/zenoh_bridge_ros2dds/share/zenoh_bridge_ros2dds/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
patches/fast_lio/: 0001-local-changes.patch
scripts/: apply_patches.sh  docker_shell.sh  list_target_src.sh  record_patches.sh  run_zenoh_client.sh  sync_configs.sh  visualization_host_shell.sh
src/ros/cmd_vel_control/: CMakeLists.txt
src/ros/cmd_vel_control/src/: low_level_ctrl.cpp  read_wireless_controller.cpp  sport_mode_ctrl.cpp
src/ros/imu_publisher/: CMakeLists.txt  package.xml
src/ros/imu_publisher/src/: imu_publisher.cpp
src/ros/unitree_ros2/: setup.sh
(+1 files in other folders)
