<?xml version="1.0"?>
<package format="3">
  <name>imu_publisher</name>
  <version>0.0.0</version>
  <description>Publish ROS standard IMU messages from Unitree Go2 lowstate.</description>
  <maintainer email="unitree@unitree.com">Unitree</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_go</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
